--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "bugs": {
     "url": "https://github.com/mapbox/geo-viewport/issues"
   },
-  "version": "0.2.2",
+  "version": "0.2.4",
   "dependencies": {
-    "@mapbox/sphericalmercator": "rentpath/sphericalmercator"
+    "@mapbox/sphericalmercator": "rentpath/sphericalmercator#v1.0.6"
   },
   "scripts": {
     "test": "tap test/*.js",
